--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build": "expo export -p web",
+    "vercel-build": "expo export",
     "lint": "expo lint"
   },
   "dependencies": {
